fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   width: 100%;
